project('misc', 'c', version: '0.1', default_options: ['warning_level=3'])

dep = dependency('gtk4')

executable(
  'da1',
  'da1.c',
  dependencies: dep,
  install: false,
)

executable(
  'cairo',
  'cairo.c',
  dependencies: dep,
  install: false,
)

executable(
  'lb1',
  'lb1.c',
  dependencies: dep,
  install: false,
)

executable(
  'lb2',
  'lb2.c',
  dependencies: dep,
  install: false,
)

executable(
  'lb3',
  'lb3.c',
  dependencies: dep,
  install: false,
)

executable(
  'lb4',
  'lb4.c',
  dependencies: dep,
  install: false,
)

executable(
  'pr1',
  'pr1.c',
  dependencies: dep,
  install: false,
)

executable(
  'pr2',
  'pr2.c',
  dependencies: dep,
  install: false,
)

executable(
  'pr3',
  'pr3.c',
  dependencies: dep,
  install: false,
)

executable(
  'pr4',
  'pr4.c',
  dependencies: dep,
  install: false,
)

executable(
  'list1',
  'list1.c',
  dependencies: dep,
  install: false,
)

executable(
  'list2',
  'list2.c',
  dependencies: dep,
  install: false,
)

executable(
  'list3',
  'list3.c',
  dependencies: dep,
  install: false,
)
